--- a/requirements.txt
+++ b/requirements.txt
@@ -1,224 +1,8 @@
-aiosqlite==0.22.1
-alembic==1.18.3
-altair==6.0.0
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-asttokens==3.0.0
-attrs==25.4.0
-Authlib==1.6.7
-blinker==1.9.0
-cachetools==6.2.6
-category_encoders==2.7.0
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
-choreographer==1.2.1
-click==8.3.1
-cloudpickle==3.1.2
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.3
-cryptography==46.0.4
-cycler==0.12.1
-Cython==3.2.4
-dash==4.0.0
-databricks-sdk==0.85.0
-debugpy==1.8.16
-decorator==5.2.1
-deprecation==2.1.0
-distro==1.9.0
-docker==7.1.0
-docstring_parser==0.17.0
-executing==2.2.1
-fastapi==0.128.3
-fastjsonschema==2.21.2
-Flask==3.1.2
-flask-cors==6.0.2
-fonttools==4.61.1
-gitdb==4.0.12
-GitPython==3.1.46
-google-adk==1.24.1
-google-ai-generativelanguage==0.6.15
-google-api-core==2.29.0
-google-api-python-client==2.189.0
-google-auth==2.48.0
-google-auth-httplib2==0.3.0
-google-cloud-aiplatform==1.136.0
-google-cloud-appengine-logging==1.8.0
-google-cloud-audit-log==0.4.0
-google-cloud-bigquery==3.40.0
-google-cloud-bigquery-storage==2.36.0
-google-cloud-bigtable==2.35.0
-google-cloud-core==2.5.0
-google-cloud-discoveryengine==0.13.12
-google-cloud-iam==2.21.0
-google-cloud-logging==3.13.0
-google-cloud-monitoring==2.29.1
-google-cloud-pubsub==2.35.0
-google-cloud-resource-manager==1.16.0
-google-cloud-secret-manager==2.26.0
-google-cloud-spanner==3.62.0
-google-cloud-speech==2.36.1
-google-cloud-storage==3.9.0
-google-cloud-trace==1.18.0
-google-crc32c==1.8.0
-google-genai==1.62.0
-google-generativeai==0.8.6
-google-resumable-media==2.8.0
-googleapis-common-protos==1.72.0
-graphene==3.4.3
-graphql-core==3.2.7
-graphql-relay==3.2.0
-graphviz==0.21
-greenlet==3.3.1
-grpc-google-iam-v1==0.14.3
-grpc-interceptor==0.15.4
-grpcio==1.78.0
-grpcio-status==1.71.2
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.31.2
-httpx==0.28.1
-httpx-sse==0.4.3
-huey==2.6.0
-idna==3.11
-imbalanced-learn==0.14.1
-importlib_metadata==8.7.1
-iniconfig==2.3.0
-ipykernel==6.31.0
-ipython==9.7.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.8
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.3.2
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-jupyter_client==8.8.0
-jupyter_core==5.9.1
-jupyterlab_widgets==3.0.16
-kaleido==1.2.0
-kiwisolver==1.4.9
-lightgbm==4.6.0
-llvmlite==0.46.0
-logistro==2.0.1
-Mako==1.3.10
-MarkupSafe==3.0.3
-matplotlib==3.7.5
-matplotlib-inline==0.2.1
-mcp==1.26.0
-mlflow==3.9.0
-mlflow-skinny==3.9.0
-mlflow-tracing==3.9.0
-mmh3==5.2.0
-narwhals==2.16.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-numba==0.63.1
-numpy==1.26.4
-opentelemetry-api==1.38.0
-opentelemetry-exporter-gcp-logging==1.11.0a0
-opentelemetry-exporter-gcp-monitoring==1.11.0a0
-opentelemetry-exporter-gcp-trace==1.11.0
-opentelemetry-exporter-otlp-proto-common==1.38.0
-opentelemetry-exporter-otlp-proto-http==1.38.0
-opentelemetry-proto==1.38.0
-opentelemetry-resourcedetector-gcp==1.11.0a0
-opentelemetry-sdk==1.38.0
-opentelemetry-semantic-conventions==0.59b0
-orjson==3.11.7
-packaging==25.0
-pandas==2.1.4
-parso==0.8.5
-patsy==1.0.2
-pillow==12.1.0
-pip==25.3
-platformdirs==4.5.0
-plotly==6.5.2
-plotly-resampler==0.11.0
-pluggy==1.6.0
-pmdarima==2.0.4
-prettytable==3.17.0
-prompt_toolkit==3.0.52
-proto-plus==1.27.1
-protobuf==5.29.6
-psutil==7.0.0
-pure_eval==0.2.3
-pyarrow==22.0.0
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycaret==3.3.2
-pycparser==3.0
-pydantic==2.12.5
-pydantic_core==2.41.5
-pydantic-settings==2.12.0
-pydeck==0.9.1
-Pygments==2.19.2
-PyJWT==2.11.0
-pyod==2.0.6
-pyOpenSSL==25.3.0
-pyparsing==3.3.2
-pytest==9.0.2
-pytest-timeout==2.4.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-multipart==0.0.22
-pytz==2025.2
-pywin32==311
-PyYAML==6.0.3
-pyzmq==27.1.0
-referencing==0.37.0
-requests==2.32.5
-retrying==1.4.2
-rpds-py==0.30.0
-rsa==4.9.1
-schemdraw==0.15
-scikit-base==0.7.8
-scikit-learn==1.4.2
-scikit-plot==0.3.7
-scipy==1.11.4
-seaborn==0.13.2
-setuptools==80.10.2
-simplejson==3.20.2
-six==1.17.0
-sklearn-compat==0.1.5
-skops==0.13.0
-sktime==0.26.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==2.0.46
-sqlalchemy-spanner==1.17.2
-sqlparse==0.5.5
-sse-starlette==3.2.0
-stack_data==0.6.3
-starlette==0.52.1
-statsmodels==0.14.6
-streamlit==1.54.0
-tbats==1.1.3
-tenacity==9.1.4
-threadpoolctl==3.6.0
-toml==0.10.2
-tornado==6.5.4
-tqdm==4.67.3
-traitlets==5.14.3
-tsdownsample==0.1.4.1
-typing_extensions==4.15.0
-typing-inspection==0.4.2
-tzdata==2025.3
-tzlocal==5.3.1
-uritemplate==4.2.0
-urllib3==2.6.3
-uvicorn==0.40.0
-waitress==3.0.2
-watchdog==6.0.0
-wcwidth==0.2.14
-websockets==15.0.1
-Werkzeug==3.1.5
-wheel==0.46.3
-widgetsnbextension==4.0.15
-xgboost==3.1.3
-xxhash==3.6.0
-yellowbrick==1.5
-zipp==3.23.0
+google-generativeai
+ipykernel
+pandas
+pycaret
+scikit-learn
+streamlit
+xgboost
+seaborn
